<resources>
    <string name="app_name">SNS_App</string>
    <string name="test">" hello! "</string>
    <string name="hi"> Hi!! </string>
    <string name="register">register</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="lang_info">english</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">Create new account</string>
    <string name="already">Already have an account?</string>
    <string name="register_text">Input email and password</string>
    <string name="name">name</string>
    <string name="email_check">Please check if the email is correct</string>
    <string name="password_check">Please check if the password is correct</string>
    <string name="login_success">Login Success</string>
    <string name="login_failure">Login Failure</string>
    <string name="not_input_text">There is information that has not been entered</string>
    <string name="register_success">Register Success</string>
    <string name="Input_post">Input Post...</string>
    <string name="New_Post">New Post</string>
    <string name="My_profile">My Profile</string>
    <string name="My_post_num">Post</string>
    <string name="My_followers">Followers</string>
    <string name="My_following">Following</string>
    <string name="Edit_profile">Edit Profile</string>
    <string name="Processing">Processing...</string>
    <string name="Upload_success">Uploaded Successfully</string>
    <string name="Upload_fail">Upload Failed...</string>
    <string name="Uploading_post">Uploading Post...</string>
    <string name="password_validate">password validate</string>
    <string name="find_password">Reset Password</string>
    <string name="enter_email">Please enter your registered email</string>
    <string name="input_email">Enter email</string>
    <string name="submit">Submit</string>
    <string name="processing">Processing. Wait a moment</string>
    <string name="send_email">Send a email to your mailbox</string>
    <string name="fail_send_email">Fail to send email!</string>
    <string name="profile_edit">Profile Edit</string>

</resources>