<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/tv_inputName"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:background="@drawable/tv_edge"
        android:gravity="center|start"
        android:hint="@string/name"
        android:paddingStart="15sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="440dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/lang_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lang_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/instaLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lang_info"
        app:srcCompat="@drawable/instagram_logo" />

    <EditText
        android:id="@+id/et_inputEmail"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/tv_edge"
        android:gravity="center|start"
        android:hint="@string/email"
        android:paddingStart="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instaLogo" />


    <EditText
        android:id="@+id/et_inputPw"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/tv_edge"
        android:gravity="center|start"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_inputEmail" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_submit"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_inputPw" />

    <TextView
        android:id="@+id/tv_forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="179dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="174dp"
        android:text="@string/forgot_password"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <Button
        android:id="@+id/tv_createAccount"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:text="@string/create_account"
        android:background="@drawable/btn_create"
        android:textColor="@color/lightblue"
        app:layout_constraintBottom_toTopOf="@+id/meta_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/meta_logo"
        android:layout_width="70dp"
        android:layout_height="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/meta_logo" />


</androidx.constraintlayout.widget.ConstraintLayout>