<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <EditText
        android:id="@+id/et_inputPwValid"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/tv_edge"
        android:gravity="center|start"
        android:hint="@string/password_validate"
        android:inputType="textPassword"
        android:paddingStart="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_inputPw" />

    <EditText
        android:id="@+id/et_inputName"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/tv_edge"
        android:gravity="center|start"
        android:text="@string/name"
        android:paddingStart="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_editProfile" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/tv_editProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/profile_edit"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back" />

    <EditText
        android:id="@+id/et_inputPw"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/tv_edge"
        android:gravity="center|start"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_inputEmail" />

    <EditText
        android:id="@+id/et_inputEmail"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/tv_edge"
        android:gravity="center|start"
        android:text="@string/email"
        android:paddingStart="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_inputName" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_submit"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_inputPwValid" />
</androidx.constraintlayout.widget.ConstraintLayout>