<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyPageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:src="@drawable/back">
        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="start|center"
            android:text="@string/My_profile"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/black">
        </TextView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="#5C5757">
        </ImageView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@color/black">
        </ImageView>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp">

                <LinearLayout
                    android:id="@+id/my_profile"
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:orientation="vertical">


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img_profile"
                        android:layout_width="90dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        app:civ_border_overlay="true"
                        app:civ_border_width="1dp"
                        app:civ_border_color="#000000"
                        android:src="@drawable/profile_image"/>
                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="100dp"
                        android:layout_height="20dp"
                        android:gravity="center"
                        android:text="name"
                        android:textStyle="bold">
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tv_post_num"
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:layout_toRightOf="@id/my_profile"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="20dp"
                        android:gravity="center"
                        android:text="33"
                        android:textStyle="bold"
                        android:src="@drawable/instagram_logo">
                    </TextView>
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="20dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/My_post_num">
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tv_follower"
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:layout_toRightOf="@id/tv_post_num"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="20dp"
                        android:gravity="center"
                        android:text="33"
                        android:textStyle="bold"
                        android:src="@drawable/instagram_logo">
                    </TextView>
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="20dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/My_followers">
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tv_following"
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:layout_toRightOf="@id/tv_follower"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="20dp"
                        android:gravity="center"
                        android:text="33"
                        android:textStyle="bold"
                        android:src="@drawable/instagram_logo">
                    </TextView>
                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="20dp"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="@string/My_following">
                    </TextView>
                </LinearLayout>
            </RelativeLayout>

            <Button
                android:id="@+id/btn_edit_profile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textSize="17dp"
                android:gravity="center"
                android:background="#85818A"
                android:text="@string/Edit_profile">
            </Button>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="2dp">
                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:icon="@drawable/instagram_pont_icon">
                </com.google.android.material.tabs.TabItem>

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:icon="@drawable/instagram_pont_icon">
                </com.google.android.material.tabs.TabItem>
            </com.google.android.material.tabs.TabLayout>

            <GridLayout
                android:id="@+id/grid_my_post"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:columnCount="3">
                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="130dp"
                    android:background="@color/black"
                    android:src="@drawable/instagram_logo">
                </ImageView>
                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="130dp"
                    android:src="@drawable/instagram_logo">
                </ImageView>

                <ImageView
                    android:layout_width="135dp"
                    android:layout_height="130dp"
                    android:background="@color/black"
                    android:src="@drawable/instagram_logo">
                </ImageView>


            </GridLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>


